# xevd

./: CMakeLists.txt
app/: CMakeLists.txt
cmake/: XEVDConfig.cmake.in
inc/: xevd.h
pkgconfig/: xevd.pc.in  xevdb.pc.in
src_base/: CMakeLists.txt  xevd_tp.c  xevd_util.c
src_main/: CMakeLists.txt
